# OpenMPI_GoogleTests_Examples

./: CMakeLists.mpi.txt  CMakeLists.txt  Makefile  run
cmake/: CMakeCommon.cmake  OpenMPI.cmake
cmake-build/: CMakeCache.txt  Makefile  cmake_install.cmake  compile_commands.json
cmake-build/src/: Makefile  cmake_install.cmake
cmake-build/test/: CTestTestfile.cmake  Makefile  cmake_install.cmake
src/: CMakeLists.txt
test/: CMakeLists.txt
